# Champy_Classifier

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LOGBOOK.md  PLAYBOOK.md  README.md  bentofile.yaml  data.dvc  docker-compose.airflow.yml  docker-compose.registry.yml  docker-compose.yml  main.py  models.dvc  pyproject.toml  requirements.txt  tasks.py
.claude/: settings.local.json
.claude/skills/champy-mlops/: SKILL.md
.dvc/: config
.dvc/.claude/skills/champy-mlops/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
airflow/: .env.airflow.template  Dockerfile
airflow/dags/: .airflowignore  01_champy_train_pipeline.py  02_champy_reentrainement.py  03_deploiement_progressif.py  04_champy_qualite_watchdog.py  05_champy_full_new_model.py  06_champy_restore_old_model.py  champy_canary.py  champy_reentrainement.py  champy_train_pipeline.py  deploiement_progressif.py  hello_world.py
attic/: README.md
attic/demo/lib/: datetime_utils.py
configs/: alertmanager.yml  prometheus.yml
configs/alerts/: champy_alerts.yml  thresholds.yml
configs/grafana/dashboards/: 01_api_performance.json  02_predictions.json  03_system_health.json  champy_containers_dashboard.json  champy_host_dashboard.json  champy_impact_ecologique.json
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/grafana/provisioning/datasources/: prometheus.yml
configs/monitoring/: thresholds.yml
configs/nginx/: nginx.conf
configs/training/: aggressive.yaml  convnext.yaml  default.yaml  test_cpu.yaml
data/: cleaning_report.json  curate.py  curated_manifest.csv  curated_manifest_filtered.csv  curation_report.json  data_split.py  excluded.json  quality_filter.py  quality_report.json  quality_report_calibration.json  quality_scores.csv  quality_scores_calibration.csv  raw_stats.json  split_manifest.csv  split_stats.json
demo/: access_policy.yaml  app.py  auth.py  home.py  users.yaml
demo/lib/: _path_setup.py  api_utils.py  data_utils.py  drift_utils.py  mlflow_utils.py  monitoring_utils.py
demo/pages/: 00_plateforme.py  01_donnees_brutes.py  01_données_brutes.py  02_nettoyage.py  03_augmentation.py  04_split.py  05_entrainement.py  05_entraînement.py  06_evaluation.py  06_évaluation.py  07_model_registry.py  08_prediction.py  08_prédiction.py  09_api.py  10_monitoring.py  11_drift.py  12_infrastructure.py  13_analyse_modèles.py  13_deploiement_canari.py  14_alerts.py  14_analyse_modèles.py  15_alerts.py  16_cicd.py  16_perspectives.py  17_perspectives.py
docker/: Dockerfile.api  Dockerfile.demo
docs/: ci-cd.md  deploiement_canari.md  precommit_boucle_reformatage.md  reentrainement_dag_ssh.md
docs/analysis/: 2026-05-14T07-53-42Z.json  2026-05-14T08-01-59Z.json  2026-05-14T11-50-35Z.json  2026-05-19T18-02-40Z.json  2026-05-19T18-06-11Z.json  current.json
mlflow/: Dockerfile
monitoring/: __init__.py  alert_generator.py  baseline_reference.json  baseline_snapshot.py  run_drift_report.py
monitoring/docker_exporter/: Dockerfile  docker_stats_exporter.py
notebooks/: 1-Split_Datasets.ipynb  2-Data_Exploration.ipynb  3-Train_Model.ipynb
notebooks/legacy/: 1-Split_Datasets.ipynb  2-Data_Exploration.ipynb  3-Train_Model.ipynb
scripts/: REGENERATE_HISTORY.md  compare_fastapi_bentoml.py  deploy_from_registry.py  fix_streamlit_accents.py  generate_analysis.py  import_model_to_bentoml.py  inspect_quality_scores.py  seed_grafana.py  show_augmentations.py  take_screenshots.py  validate_pytorch_model.py
src/: config.py
src/data/: build_datasets.py  dataloader.py  dataset.py  split_datasets.py
src/models/: backbone.py  convnext.py  export_onnx.py  resnet.py
src/serving/: app.py  middleware.py  schemas.py
src/serving_bentoml/: __init__.py  preprocessing.py  runner.py  schemas.py  service.py  storage.py
src/training/: callbacks.py  evaluate.py  train.py  train_cnn.py
tests/: conftest.py
tests/unit/: test_api.py  test_callbacks.py  test_dataloader.py  test_dataset.py  test_evaluate.py  test_export_onnx.py  test_prediction_store.py  test_serving_bentoml.py  test_train.py
