[project]
name = "champy-classifier"
version = "0.1.0"
description = "Classification de champignons (30 especes) - Pipeline MLOps complet"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # -- ML / Deep Learning --
    "torch>=2.2",
    "torchvision>=0.17",
    "onnx>=1.16",
    "onnxruntime>=1.17",
    # -- Data --
    "pillow>=10.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    # -- Experiment tracking & data versioning --
    "mlflow>=2.12",
    "dvc[s3]>=3.50",
    # -- Serving --
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "bentoml>=1.2,<2.0",
    "aiosqlite>=0.19",
    # -- Demo --
    "streamlit>=1.35",
    "plotly>=5.20",
    # -- Monitoring --
    "prometheus-client>=0.20",
    "evidently>=0.4",
    # -- HTTP client --
    "httpx>=0.27",
    # -- Config & utils --
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    # -- Task runner --
    "invoke>=2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "interrogate>=1.7",
]
# Pipeline de curation/filtrage des données brutes (step one-off, pas
# requis par le training ni le serving).
filter = [
    "open_clip_torch>=2.20",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

# ---------- Ruff ----------
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests", "demo"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC003",  # Path is used at runtime everywhere (pathlib-based project)
]

[tool.ruff.lint.per-file-ignores]
# Les pages Streamlit ont besoin de sys.path.insert avant les imports
"demo/pages/*.py" = ["E402"]
"demo/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "onnx.*",
    "onnxruntime.*",
    "evidently.*",
    "streamlit.*",
    "torchvision.*",
    "cv2.*",
    "bentoml.*",
]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ---------- Interrogate ----------
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = false
fail-under = 100
exclude = ["tests", "notebooks", "demo/pages"]
verbose = 1
